Fix no scrollbar in inspector

--- a/src/Weaver.WebApp/packages/graph/src/components/utils/inspector/inspector.module.scss
+++ b/src/Weaver.WebApp/packages/graph/src/components/utils/inspector/inspector.module.scss
@@ -5,10 +5,14 @@
         right: 0;
 
         height: 100%;
+        max-height: 100%;
+
         width: 20vw;
         min-width: 300px;
         max-width: 500px;
 
         z-index: 1;
+
+        overflow-y: auto;
     }
 }
